loaded tidyverse and moderndive

--- a/p8105_dmh2228_hw1.Rmd
+++ b/p8105_dmh2228_hw1.Rmd
@@ -5,4 +5,15 @@ date: "2023-09-19"
 output: github_document
 ---
 
+## Problem 1 and 2: load tidyverse
+
+```{r}
+library(tidyverse)
+```
+
+## Problem 1: load moderndive
+
+```{r}
+library(moderndive)
+```
 
