loaded "early_january_weather" dataset

--- a/p8105_dmh2228_hw1.Rmd
+++ b/p8105_dmh2228_hw1.Rmd
@@ -17,3 +17,9 @@ library(tidyverse)
 library(moderndive)
 ```
 
+## Problem 1: load "early_january_weather"
+
+```{r}
+data("early_january_weather")
+```
+
