--- a/p8105_dmh2228_hw1.md
+++ b/p8105_dmh2228_hw1.md
@@ -25,3 +25,9 @@ library(tidyverse)
 ``` r
 library(moderndive)
 ```
+
+## Problem 1: load “early_january_weather”
+
+``` r
+data("early_january_weather")
+```
