added rows and columns of "early_january_weather"

--- a/p8105_dmh2228_hw1.md
+++ b/p8105_dmh2228_hw1.md
@@ -32,7 +32,7 @@ library(moderndive)
 data("early_january_weather")
 ```
 
-## Problem 1: Descriptive information of “early_january_weather”
+## Problem 1: descriptive information of “early_january_weather”
 
 ``` r
 view(early_january_weather)
@@ -45,3 +45,19 @@ tail(early_january_weather)
 “early_january_weather” has 358 observations and 15 variables (origin,
 year, month, day, hour, temp, dewp, humid, wind_dir, wind_speed, precip,
 pressure, visib, time_hour).
+
+## Problem 1: rows and columnns of “early_january_weather”
+
+``` r
+nrow(early_january_weather)
+```
+
+    ## [1] 358
+
+``` r
+ncol(early_january_weather)
+```
+
+    ## [1] 15
+
+“early_january_weather” has 358 rows and 15 columns.
