--- a/p8105_dmh2228_hw1.Rmd
+++ b/p8105_dmh2228_hw1.Rmd
@@ -23,7 +23,7 @@ library(moderndive)
 data("early_january_weather")
 ```
 
-## Problem 1: Descriptive information of "early_january_weather"
+## Problem 1: descriptive information of "early_january_weather"
 
 ```{r, eval = FALSE}
 view(early_january_weather)
@@ -34,3 +34,13 @@ tail(early_january_weather)
 ```
 
 "early_january_weather" has 358 observations and 15 variables (origin, year, month, day, hour, temp, dewp, humid, wind_dir, wind_speed, precip, pressure, visib, time_hour).
+
+## Problem 1: rows and columnns of "early_january_weather"
+
+```{r}
+nrow(early_january_weather)
+
+ncol(early_january_weather)
+```
+
+"early_january_weather" has 358 rows and 15 columns. 
