--- a/p8105_dmh2228_hw1.md
+++ b/p8105_dmh2228_hw1.md
@@ -61,3 +61,13 @@ ncol(early_january_weather)
     ## [1] 15
 
 “early_january_weather” has 358 rows and 15 columns.
+
+## Problem 1: mean temperature in “early_january_weather”
+
+``` r
+mean(early_january_weather$temp)
+```
+
+    ## [1] 39.58212
+
+The mean temperature in “early_january_weather” is 39.58212.
