created df for plot, created scatter plot for temp and time_hour in "early_january_weather", saved plot as pdf

--- a/p8105_dmh2228_hw1.md
+++ b/p8105_dmh2228_hw1.md
@@ -71,3 +71,20 @@ mean(early_january_weather$temp)
     ## [1] 39.58212
 
 The mean temperature in “early_january_weather” is 39.58212.
+
+## Problem 1: scatter plot of temp and time_hour in “early_january_weather”
+
+``` r
+plot_df = tibble(
+  x = early_january_weather$time_hour,
+  y = early_january_weather$temp
+)
+
+ggplot(plot_df, aes(x = x, y = y, color = early_january_weather$humid)) + geom_point()
+```
+
+![](p8105_dmh2228_hw1_files/figure-gfm/unnamed-chunk-7-1.png)<!-- -->
+
+``` r
+ggsave("early_january_weather_plot.pdf", height = 5, width = 5)
+```
