--- a/p8105_dmh2228_hw1.Rmd
+++ b/p8105_dmh2228_hw1.Rmd
@@ -65,3 +65,18 @@ ggplot(plot_df, aes(x = x, y = y, color = early_january_weather$humid)) + geom_p
 ggsave("early_january_weather_plot.pdf", height = 5, width = 5)
 ```
 
+The scatter plot shows fluctuations between temperature and hour. Humidity varies by day.
+
+## Problem 2: data frame 
+
+```{r}
+random_sample_df = tibble(
+  norm_samp = rnorm(10),
+  vec_logical = norm_samp > 0,
+  vec_char = c("This", "is", "an", "example", "of", "using", "data", "frames", "and", "vectors"),
+  vec_factor = factor(c("low", "medium", "high", "high", "high", "low", "medium", "low", "high", "low")),
+  vec_levels = factor(vec_factor, levels = c("low", "medium", "high"))
+)
+```
+
+
