--- a/p8105_dmh2228_hw1.md
+++ b/p8105_dmh2228_hw1.md
@@ -1,7 +1,7 @@
 p8105_dmh2228_hw1
 ================
 Diana Hernandez
-2023-09-19
+2023-09-23
 
 ## Problem 1 and 2: load tidyverse
 
@@ -90,7 +90,8 @@ ggsave("early_january_weather_plot.pdf", height = 5, width = 5)
 ```
 
 The scatter plot shows fluctuations between temperature and hour.
-Humidity varies by day.
+Humidity varies by hour and day. The temperature does increase over time
+in days.
 
 ## Problem 2: data frame
 
@@ -114,6 +115,11 @@ mean_samp_norm = mean(pull(random_sample_df, norm_samp))
 mean_samp_logic = mean(pull(random_sample_df, vec_logical))
 ```
 
+Both samp_norm and samp_logic have a mean.
+
+Note: the mean will change each time random_sample is run because a new
+random sample of 10 will be generated.
+
 ``` r
 mean_samp_char = mean(pull(random_sample_df, vec_char))
 ```
@@ -136,13 +142,9 @@ There is no mean for vec_factor.
 
 ``` r
 num_logical = as.numeric(pull(random_sample_df, vec_logical))
-```
 
-``` r
 num_char = as.numeric(pull(random_sample_df, vec_char))
-```
 
-``` r
 num_factor = as.numeric(pull(random_sample_df, vec_factor))
 ```
 
@@ -151,4 +153,5 @@ character variable. For the logical and factor variables, R is able to
 assign numbers to each case because there are groups. The character
 variable does not have anything to be classified by. This helps explain
 why a mean is obtained for the logical variable and not the character
-variable.
+variable. To receive a mean, the argument must be numeric or logical,
+that is why the factor variable did not give a mean.
